2008-11-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  dump_clutter_actor_tree(): if the actor to dump is a ClutterLabel
	  and it doesn't have a name otherwise print the label text as name.
	* src/home/hd-home.c
	* src/home/hd-task-navigator.c:
	  Added more explicit clutter_actor_set_name()s to make debugging
	  easier.

2008-11-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  release_win(): Hide the dialogs as well as the application window
	  when exiting the switcher.

2008-11-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  hd_task_navigator_add_dialog(): Show the new dialog on the top,
	  regardless of what it is transient for.

2008-11-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  When an application window actor is added to the switcher
	  set its clutter name to the class_hint of the client
	  unless it had a name already.

2008-11-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-task-navigator.c (release_win): Add clutter_actor_hide()
	to fix problem with switching to application when tapping on home.

2008-11-24  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgc.c:
	Fixed problem with home view settings window not being shown
	because of clutter ordering

2008-11-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c: Use MB_WM_DECOR_BUTTON_NOHANDLERS for the dummy
	decor button that is created for moving the application title.

2008-11-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.h
	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_dump_debug_info() added.  Currently it g_debug()s
	  who has the XGetInputFocus() and the clutter actor hierarchy.
	  Call it whenever you want.
	* src/main.c:
	  Dump debug info on SIGUSR1.
	* src/launcher/hd-launcher-utils.c
	* src/home/hd-switcher.c
	* src/home/hd-task-navigator.c: